--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,18 @@
-/* src/index.css */
-
+/* Contenedor general */
 .container {
   max-width: 1200px;
   margin: 0 auto;
 }
 
+/* Estilo de la tabla */
 .table {
-  background-color: #f9f9f9;
+  background-color: #FFFFFF; /* Fondo blanco */
   border: 1px solid #ddd;
 }
 
+/* Encabezado de la tabla */
 .table thead {
-  background-color: #0056b3;
+  background-color: #1A3B63; /* Azul Oscuro */
   color: white;
 }
 
@@ -19,14 +20,17 @@
   text-align: center;
 }
 
+/* Filas pares de la tabla */
 .table tbody tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: #F2F2F2; /* Gris claro para filas pares */
 }
 
+/* Hover en las filas de la tabla */
 .table tbody tr:hover {
-  background-color: #e9ecef;
+  background-color: #E9ECEF; /* Gris claro para el hover */
 }
 
+/* Estilo de los controles del formulario */
 .form-control {
   margin-bottom: 10px;
 }
